fixed card jumps on animation bug and fixed text caoursel height change/hidden overflow

--- a/style.css
+++ b/style.css
@@ -153,8 +153,9 @@ svg {
 }
 
 .textCarousel-inner {
-    height: 80%;
+    max-height: 80%;
     margin-bottom: 1rem;
+    overflow: hidden;
 }
 
 .buttonContainer {
